--- a/site/index.html
+++ b/site/index.html
@@ -16,10 +16,13 @@
     <input type="range" id="dropSlider" min="0" max="10" value="0" />
 </div>
 
-<!-- Row 1: All map tables -->
+<!-- Row 1: Map score tables -->
 <div id="maps-row" class="maps-row"></div>
 
-<!-- Row 2: Average table -->
+<!-- Row 2: Dropped maps highlight -->
+<div id="dropped-row" class="maps-row"></div>
+
+<!-- Row 3: Average table -->
 <div id="average-section"></div>
 
 <script src="script.js"></script>
