--- a/site/index.html
+++ b/site/index.html
@@ -1,51 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8" />
-    <title>osu! Tryouts Dashboard</title>
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <title>osu! Tryouts</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        .home-container {
+            text-align: center;
+            margin-top: 100px;
+        }
+
+        .home-container a {
+            display: inline-block;
+            margin: 20px;
+            padding: 15px 30px;
+            background: #d9ebf9;
+            border: 1px solid #999;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .home-container a:hover {
+            background: #c3def3;
+        }
+    </style>
 </head>
 <body>
 
-<h1>osu! Tryouts Dashboard</h1>
+<div class="home-container">
+    <h1>osu! Tryouts Dashboard</h1>
 
-<div class="controls">
-    <h3>Filter Players</h3>
-
-    <div class="player-buttons">
-        <button id="select-all">Select All</button>
-        <button id="clear-all">Clear All</button>
-    </div>
-
-    <div id="player-selector"></div>
+    <a href="low_sr.html">Low SR Leaderboard</a>
+    <a href="high_sr.html">High SR Leaderboard</a>
 </div>
 
-
-
-<div class="controls">
-    <label>
-        Drop bottom <span id="dropValue">0</span> score(s) per player
-    </label>
-    <input type="range" id="dropSlider" min="0" max="10" value="0" />
-</div>
-
-<!-- Row 1: Map score tables -->
-<div id="maps-row" class="maps-row"></div>
-
-<!-- Row 2: Dropped maps highlight -->
-<div id="dropped-row" class="maps-row"></div>
-
-<!-- Row 3: Average table -->
-<div id="average-section"></div>
-
-<!-- Row 4: Custom Map Leaderboard -->
-<div id="custom-section">
-    <h2>Custom Map Leaderboard</h2>
-    <div id="map-selector"></div>
-    <div id="custom-leaderboard"></div>
-</div>
-
-
-<script src="script.js"></script>
 </body>
 </html>
